// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Switch default 1`] = `
<button
  class="arco-switch arco-switch-type-circle"
  type="button"
>
  <div
    class="arco-switch-dot"
  />
</button>
`;

exports[`ConfigProvider componentConfig.Switch set className globally 1`] = `
<button
  class="arco-switch arco-switch-type-circle global-default-class"
  type="button"
>
  <div
    class="arco-switch-dot"
  />
</button>
`;

exports[`ConfigProvider componentConfig.Switch set className globally and component set className itself. 1`] = `
<button
  class="arco-switch arco-switch-type-circle component-class"
  type="button"
>
  <div
    class="arco-switch-dot"
  />
</button>
`;
